test/spec_vectors/i64/fail/module_29.wat
(module (func (result i64) (i64.ne (i32.const 0) (f32.const 0))))